Dark mode fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    @variants responsive {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+
+      /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+      }
+    }
+  }
+
+.theme-light {
+    --background: #f8f8f8;
+    --text: #313131;
+  }
+  .theme-dark {
+    --background: #313131;
+    --text: #f8f8f8;
+  }
